@@ -2,7 +2,7 @@ name    = Plack-App-MCCS
 author  = Ido Perlmuter <ido@ido50.net>
 license = Perl_5
 copyright_holder = Ido Perlmuter
-copyright_year   = 2014
+copyright_year   = 2015
 
 [@IDOPEREL]
 
